[project]
name = "mcp-collection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dashscope>=1.23.9",
    "gitpython>=3.1.45",
    "mcp>=1.12.0",
    "pyjianyingdraft @ git+https://github.com/943003797/pyJianYingDraft.git",
    "pyquery>=2.0.1",
]
